# falcon-chatbot

./: .gitignore  README.md  pyproject.toml
data/: frequently_aksed_questions.json
notebooks/: main.ipynb
