[tool.poetry]
name = "falcon-chatbot"
version = "0.1.0"
description = "AI-powered chatbot for 24/7 customer support, resolving queries and enhancing satisfaction"
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
